# LRAUV-CPP

./: .gitignore  CMakeLists.txt  analysis.py  exp_log.md  exp_summary.md  main.cpp  main_1_5.py  main_ekf.cpp  main_obstacles.cpp  main_raw.cpp
bak/: main_0_1.py  main_0_2.py  main_1_4.py
cmake/: FindArmadillo.cmake
data/: DataLoad.py  UUVV01  UUVV111  UUVV61
dataset/: dataloader.py
include/: DynamicObstacles.h  EKF.h  FlowField.h  MyHelper.h  RobotModel.h  SimulationView.h
lauv/: LAVU.cpp  LAVU.h
navigation/: CMakeLists.txt
navigation/src/: main.cpp  navigation.cpp  navigation.h
src/: MCTS.cpp  MCTS.h  TreeNode.h
test/01/: 1.txt  2.txt  3.txt  4.txt
test/111/: 1.txt  2.txt  3.txt  4.txt
test/61/: 1.txt  2.txt  3.txt  4.txt
